Closes #806 - fixes sophisticated business post heading center alignment width.

--- a/professional-business/style-rtl.css
+++ b/professional-business/style-rtl.css
@@ -7,7 +7,7 @@ Author URI: https://wordpress.com/
 Template: twentynineteen
 Description: Simple, yet sophisticated, with subtle, elegant typography, Professional Business conveys quality and integrity, which makes it especially good fit for accounting, law, and consultancy firms.
 Requires at least: WordPress 4.9.6
-Version: 1.1
+Version: 1.2
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: professional-business
@@ -1621,7 +1621,7 @@ body.page .main-navigation {
 }
 
 .post-navigation .nav-links a .meta-nav {
-  color: #767676;
+  color: #1e1e1e;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -1632,7 +1632,7 @@ body.page .main-navigation {
   display: none;
   content: "—";
   width: 2em;
-  color: #767676;
+  color: #1e1e1e;
   height: 1em;
 }
 
@@ -1646,21 +1646,8 @@ body.page .main-navigation {
   color: #005177;
 }
 
-@media only screen and (min-width: 1168px) {
-  .post-navigation .nav-links .nav-previous,
-  .post-navigation .nav-links .nav-next {
-    min-width: calc(50% - 2 * 1rem);
-  }
-}
-
 .post-navigation .nav-links .nav-previous {
   order: 2;
-}
-
-@media only screen and (min-width: 1168px) {
-  .post-navigation .nav-links .nav-previous {
-    order: 1;
-  }
 }
 
 .post-navigation .nav-links .nav-previous + .nav-next {
@@ -1671,14 +1658,11 @@ body.page .main-navigation {
   display: inline;
 }
 
-.post-navigation .nav-links .nav-next {
-  order: 1;
-}
-
-@media only screen and (min-width: 1168px) {
+@media only screen and (min-width: 768px) {
   .post-navigation .nav-links .nav-next {
     order: 2;
     padding-right: 1rem;
+    margin-right: auto;
   }
 }
 
