--- a/sophisticated-business/sass/site/primary/_posts-and-pages.scss
+++ b/sophisticated-business/sass/site/primary/_posts-and-pages.scss
@@ -31,17 +31,12 @@
 
 	.entry-header {
 
-		margin: calc(3 * #{ $size__spacing-unit}) auto $size__spacing-unit;
+		margin: calc(3 * #{ $size__spacing-unit}) $size__spacing-unit $size__spacing-unit;
 		position: relative;
 		text-align: center;
 
 		@include media(tablet) {
-			max-width: $size__site-tablet-content;
-			margin: calc(3 * #{ $size__spacing-unit}) auto auto;
-		}
-
-		@include media(desktop) {
-			max-width: $size__site-desktop-content;
+			margin: calc(3 * #{ $size__spacing-unit}) $size__site-margins $size__spacing-unit;
 		}
 	}
 
