--- a/sophisticated-business/style-rtl.css
+++ b/sophisticated-business/style-rtl.css
@@ -1617,12 +1617,12 @@ body.page .main-navigation {
 --------------------------------------------------------------*/
 /* Next/Previous navigation */
 .post-navigation {
-  margin: calc(3 * 1rem) 0;
+  margin: calc(3 * 1rem) 1rem 1rem;
 }
 
 @media only screen and (min-width: 768px) {
   .post-navigation {
-    margin: calc(3 * 1rem) auto;
+    margin: calc(3 * 1rem) auto calc(1rem / 2);
     max-width: calc(8 * (100vw / 12) - 28px);
   }
 }
@@ -1634,7 +1634,6 @@ body.page .main-navigation {
 }
 
 .post-navigation .nav-links {
-  margin: 0 1rem;
   max-width: 100%;
   display: flex;
   flex-direction: column;
@@ -1642,20 +1641,12 @@ body.page .main-navigation {
 
 @media only screen and (min-width: 768px) {
   .post-navigation .nav-links {
-    margin: 0;
-  }
-}
-
-@media only screen and (min-width: 1168px) {
-  .post-navigation .nav-links {
     flex-direction: row;
-    margin: 0 auto;
-    max-width: calc(6 * (100vw / 12) - 28px);
   }
 }
 
 .post-navigation .nav-links a .meta-nav {
-  color: #cccccc;
+  color: #fff;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -1666,7 +1657,7 @@ body.page .main-navigation {
   display: none;
   content: "—";
   width: 2em;
-  color: #cccccc;
+  color: #fff;
   height: 1em;
 }
 
@@ -1680,21 +1671,8 @@ body.page .main-navigation {
   color: #b59439;
 }
 
-@media only screen and (min-width: 1168px) {
-  .post-navigation .nav-links .nav-previous,
-  .post-navigation .nav-links .nav-next {
-    min-width: calc(50% - 2 * 1rem);
-  }
-}
-
 .post-navigation .nav-links .nav-previous {
   order: 2;
-}
-
-@media only screen and (min-width: 1168px) {
-  .post-navigation .nav-links .nav-previous {
-    order: 1;
-  }
 }
 
 .post-navigation .nav-links .nav-previous + .nav-next {
@@ -1705,14 +1683,11 @@ body.page .main-navigation {
   display: inline;
 }
 
-.post-navigation .nav-links .nav-next {
-  order: 1;
-}
-
-@media only screen and (min-width: 1168px) {
+@media only screen and (min-width: 768px) {
   .post-navigation .nav-links .nav-next {
     order: 2;
     padding-right: 1rem;
+    margin-right: auto;
   }
 }
 
